--- a/test/vimwiki-reader-output.html
+++ b/test/vimwiki-reader-output.html
@@ -1,45 +1,36 @@
+<h1 id="implemented"><em><strong>implemented</strong></em></h1>
 <h1 id="header">header</h1>
 <h2 id="header-level-two">header level two</h2>
-<p>===header <code>level</code> 3===</p>
+<h3 id="header-level-3">header <code>level</code> 3</h3>
 <h4 id="header-level-four">header <del>level</del> four</h4>
 <h5 id="header-level-5">header <em><strong>level</strong> 5</em></h5>
 <h6 id="header-level-6">header level 6</h6>
 <p>======= not a header ========</p>
-<h2 id="centred-header">centred header</h2>
+<p>hi== not a header ==</p>
+<p>=== not a header ==</p>
+<p>=== not a header ===-</p>
+<p>not a header:</p>
+<p>=n=</p>
+<h2 id="centred-header" class="justcenter">centred header</h2>
 <h2 id="emph-and-strong">emph and strong</h2>
 <p><em>emph</em> <strong>strong</strong></p>
-<ul>
-<li><em>strong and emph</em>*</li>
-</ul>
+<p><strong><em>strong and emph</em></strong></p>
 <p><em><strong>emph and strong</strong></em></p>
-<ul>
-<li><em>emph inside</em> strong*</li>
-</ul>
-<ul>
-<li>strong with <em>emph</em>*</li>
-</ul>
+<p><strong><em>emph inside</em> strong</strong></p>
+<p><strong>strong with <em>emph</em></strong></p>
 <p><em><strong>strong inside</strong> emph</em></p>
 <h2 id="horizontal-rule">horizontal rule</h2>
 <p>top</p>
 <hr />
-<p>bottom</p>
+<p>middle</p>
 <hr />
+<p>bottom</p>
 <h2 id="strikeout">strikeout</h2>
-<p><del>This is <em>struck out</em></del></p>
+<p><del>This is <em>struck out</em></del> with emph</p>
 <h2 id="comments">comments</h2>
-<p>inline %% not secret</p>
-<h2 id="linebreaks">linebreaks</h2>
-<p>hi&lt;br/&gt;there</p>
-<p>hi&lt;br&gt;</p>
-<p>there</p>
-<h2 id="sup-sub">sup, sub</h2>
-<p>super^script^</p>
-<p>sub,,script,,</p>
+<p>this is %% not secret</p>
 <h2 id="inline-code">inline code</h2>
 <p>Here is some <code>inline code</code>.</p>
-<h2 id="code-blocks">code blocks</h2>
-<pre><code> for i in range(1, 5):
-     print(i)</code></pre>
 <h2 id="preformatted-text">preformatted text</h2>
 <pre><code>  Tyger! Tyger! burning bright
    In the forests of the night,
@@ -51,28 +42,20 @@
      What the hand dare sieze the fire?</code></pre>
 <h2 id="block-quotes">block quotes</h2>
 <blockquote>
-<p>This would be a blockquote in Vimwiki. It is not highlighted in Vim but</p>
-</blockquote>
-<blockquote>
-<p>could be styled by CSS in HTML. Blockquotes are usually used to quote a</p>
-</blockquote>
-<blockquote>
-<p>long piece of text from another source.</p>
+This would be a blockquote in Vimwiki. It is not <strong>highlighted</strong> in Vim but could be styled by CSS in HTML. Blockquotes are usually used to quote a long piece of text from another source. <del>blah blah</del> <span id="-blockquote"></span><span id="blockquote" class="tag">blockquote</span>
 </blockquote>
 <h2 id="external-links">external links</h2>
 <p><a href="http://google.com" title="link"><em>Google</em> search engine</a></p>
 <p><a href="http://pandoc.org" class="uri">http://pandoc.org</a></p>
 <p><a href="ftp://vim.org" class="uri">ftp://vim.org</a></p>
-<p><a href="http://google.com" class="uri" title="link">http://google.com</a><a href="http://google.com" class="uri">http://google.com</a>]]</p>
+<p><a href="http://google.com" class="uri" title="link">http://google.com</a></p>
 <p><a href="mailto:info@example.org">email me</a></p>
+<p><a href="mailto:hello@bye.com">mailto:hello@bye.com</a></p>
 <h2 id="internal-links">internal links</h2>
-<p><a href="This is a link" class="uri" title="link">This is a link</a>This is a link]]</p>
+<p><a href="This is a link" class="uri" title="link">This is a link</a></p>
 <p><a href="This is a link source" title="link">Description of the link</a></p>
-<p><a href="projects/Important Project 1" class="uri" title="link">projects/Important Project 1</a>projects/Important Project 1]]</p>
-<p><a href="../index" class="uri" title="link">../index</a>../index]]</p>
-<p><a href="a subdirectory/" title="link">Other files</a></p>
-<p><a href="wiki1:This is a link source" title="link">Description of the link</a></p>
-<p><a href="#My anchor" class="uri" title="link">#My anchor</a>#My anchor]]</p>
+<p><a href="projects/Important Project 1" class="uri" title="link">projects/Important Project 1</a> <a href="../index" class="uri" title="link">../index</a> <a href="a subdirectory/" title="link">Other files</a></p>
+<p><a href="wiki1:This is a link source" title="link">Description of the link</a> <a href="#My anchor" class="uri" title="link">#My anchor</a></p>
 <p><a href="#tag-one" title="link">try me to test tag anchors</a></p>
 <p><a href="#block quotes" title="link">try me to test header anchors</a></p>
 <p><a href="Todo List#Tomorrow" title="link">Tasks for tomorrow</a></p>
@@ -80,8 +63,6 @@
 <h2 id="images">images</h2>
 <p><img src="file:./lalune.jpg" alt="" /></p>
 <p><embed src="http://vimwiki.googlecode.com/hg/images/vimwiki_logo.png|Vimwiki" /></p>
-<p><embed src="http://.../vimwiki_logo.png|cool stuff|style=&quot;width:150px;height:120px;&quot;" /></p>
-<p><embed src="http://.../vimwiki_logo.png||class=&quot;center flow blabla&quot;" /></p>
 <p><a href="http://someaddr.com/bigpicture.jpg" title="link"><img src="./movie.jpg" alt="" /></a></p>
 <h2 id="lists">lists</h2>
 <ul>
@@ -92,27 +73,6 @@
 <li>Bulleted list item 1</li>
 <li>Bulleted list item 2</li>
 </ul>
-<p>1. Numbered list item 1</p>
-<p>2. Numbered list item 2</p>
-<p>3. Numbered list item 3</p>
-<p>4. Numbered list item 1</p>
-<p>5. Numbered list item 2</p>
-<p>6. Numbered list item 3</p>
-<p>1) Numbered list item 1</p>
-<p>2) Numbered list item 2</p>
-<p>3) Numbered list item 3</p>
-<p>a) Numbered list item 1</p>
-<p>b) Numbered list item 2</p>
-<p>c) Numbered list item 3</p>
-<p>A) Numbered list item 1</p>
-<p>B) Numbered list item 2</p>
-<p>C) Numbered list item 3</p>
-<p>i) Numbered list item 1</p>
-<p>ii) Numbered list item 2</p>
-<p>iii) Numbered list item 3</p>
-<p>I) Numbered list item 1</p>
-<p>II) Numbered list item 2</p>
-<p>III) Numbered list item 3</p>
 <ol>
 <li>Bulleted list item 1</li>
 <li>the # become numbers when converted to HTML</li>
@@ -121,40 +81,32 @@
 <li>Bulleted list item 1</li>
 <li>Bulleted list item 2</li>
 </ul>
-<p>a) Numbered list sub item 1</p>
-<p>b) more ...</p>
-<ul>
-<li>and more ...</li>
-<li>...</li>
-</ul>
-<p>c) Numbered list sub item 3</p>
-<p>1. Numbered list sub sub item 1</p>
-<p>2. Numbered list sub sub item 2</p>
-<p>d) etc.</p>
-<ul>
-<li>Bulleted list item 3</li>
-</ul>
 <ul>
 <li>Item 1</li>
 </ul>
-<p>Item 1 continued line.</p>
-<p>Item 1 next continued line.</p>
+<p>Item 1 continued line. Item 1 next continued line.</p>
 <ul>
-<li>Item 2</li>
-<li>Sub item 1</li>
+<li>Item 2
+<ol>
+<li>Sub item 1 Sub item 1 continued line. Sub item 1 next continued line.</li>
+<li>Sub item 2, as an ordered list item even though the identifier is <code>*</code></li>
+<li>etc. Continuation of Item 2 Next continuation of Item 2</li>
+</ol></li>
 </ul>
-<p>Sub item 1 continued line.</p>
-<p>Sub item 1 next continued line.</p>
+<p>But this is a new paragraph.</p>
+<ol>
+<li>1
 <ul>
-<li>Sub item 2</li>
-<li>etc.</li>
+<li><code>1.1</code></li>
+</ul></li>
+<li>2
+<ul>
+<li>2.1</li>
+</ul></li>
+</ol>
+<ul>
+<li>3</li>
 </ul>
-<p>Continuation of Item 2</p>
-<p>Next continuation of Item 2</p>
-<p>Term 1:: Definition 1</p>
-<p>Term 2::</p>
-<p>:: Definition 2</p>
-<p>:: Definition 3</p>
 <h2 id="math">math</h2>
 <p><span class="math inline">∑<sub><em>i</em></sub><em>a</em><sub><em>i</em></sub><sup>2</sup> = 1</span></p>
 <p><br /><span class="math display">$$\[
@@ -177,37 +129,67 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td>------</td>
-<td>-------------------</td>
-<td>--------------------</td>
-</tr>
-<tr class="even">
 <td> 1900 </td>
 <td> -10 </td>
 <td> 25 </td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td> 1910 </td>
 <td> -15 </td>
 <td> 30 </td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td> 1920 </td>
 <td> -10 </td>
 <td> 32 </td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td> 1930 </td>
 <td> <em>N/A</em> </td>
 <td> <em>N/A</em> </td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td> 1940 </td>
 <td> -2 </td>
 <td> 40 </td>
 </tr>
 </tbody>
 </table>
+<h2 id="paragraphs">paragraphs</h2>
+<p>This is first paragraph with two lines.</p>
+<p>This is a second paragraph with two lines after many blank lines.</p>
+<h2 id="the-todo-mark">the todo mark</h2>
+<p><span class="todo">TODO:</span></p>
+<h1 id="not-implemented-yet"><em><strong>not implemented yet</strong></em></h1>
+<h2 id="sup-sub">sup, sub</h2>
+<p>super^script^</p>
+<p>sub,,script,,</p>
+<h2 id="preformat-with-attributes">preformat with attributes</h2>
+<pre><code> for i in range(1, 5):
+     print(i)</code></pre>
+<h2 id="image-with-attributes">image with attributes</h2>
+<p><embed src="http://.../vimwiki_logo.png|cool stuff|style=&quot;width:150px;height:120px;&quot;" /></p>
+<p><embed src="http://.../vimwiki_logo.png||class=&quot;center flow blabla&quot;" /></p>
+<h2 id="ordered-lists-with-non--identifiers">ordered lists with non-# identifiers</h2>
+<p>1. Numbered list item 1 2. Numbered list item 2 3. Numbered list item 3</p>
+<p>4. Numbered list item 1 5. Numbered list item 2 6. Numbered list item 3</p>
+<p>1) Numbered list item 1 2) Numbered list item 2 3) Numbered list item 3</p>
+<p>a) Numbered list item 1 b) Numbered list item 2 c) Numbered list item 3</p>
+<p>A) Numbered list item 1 B) Numbered list item 2 C) Numbered list item 3</p>
+<p>i) Numbered list item 1 ii) Numbered list item 2 iii) Numbered list item 3</p>
+<p>I) Numbered list item 1 II) Numbered list item 2 III) Numbered list item 3</p>
+<p>c) Numbered list sub item 3 1. Numbered list sub sub item 1 2. Numbered list sub sub item 2 d) etc.</p>
+<p>a) Numbered list sub item 1 b) more ...</p>
+<ul>
+<li>and more ...</li>
+<li>...</li>
+</ul>
+<ul>
+<li>Bulleted list item 3</li>
+</ul>
+<h2 id="definition-list">definition list</h2>
+<p>Term 1:: Definition 1 Term 2:: :: Definition 2 :: Definition 3</p>
+<h2 id="tables-with-spans">tables with spans</h2>
 <table>
 <thead>
 <tr class="header">
@@ -238,9 +220,25 @@
 </tr>
 </tbody>
 </table>
-<p>&gt;</p>
-<h2 id="paragraphs">paragraphs</h2>
-<p>This is first paragraph</p>
-<p>with two lines.</p>
-<p>This is a second paragraph with</p>
-<p>two lines.</p>
+<h2 id="centered-tables">centered tables</h2>
+<table>
+<thead>
+<tr class="header">
+<th> a </th>
+<th> b </th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td> c </td>
+<td> d </td>
+</tr>
+</tbody>
+</table>
+<h2 id="placeholders">placeholders</h2>
+<p>%title title %template template</p>
+<h2 id="todo-lists">todo lists</h2>
+<ul>
+<li>[ ] task 1</li>
+<li>[ ] task 2</li>
+</ul>
