removed redundant imports and corrected use of otherwise; minor change to the test

--- a/test/vimwiki-reader.html
+++ b/test/vimwiki-reader.html
@@ -24,7 +24,7 @@
 <hr />
 <p>middle</p>
 <hr />
-<p>bottom</p>
+<p>not a rule----- bottom</p>
 <h2 id="strikeout">strikeout</h2>
 <p><del>This is <em>struck out</em></del> with emph</p>
 <h2 id="comments">comments</h2>
