images supports attributes now.

--- a/test/vimwiki-reader.html
+++ b/test/vimwiki-reader.html
@@ -65,12 +65,12 @@
 <p><a href="Todo List#Tomorrow" title="link">Tasks for tomorrow</a></p>
 <p><a href="file:../assets/data.csv" title="link">Important Data</a></p>
 <h2 id="images">images</h2>
-<p><img src="file:./lalune.jpg" alt=" " /></p>
+<p><img src="file:./lalune.jpg" alt="" /></p>
 <p><img src="http://vimwiki.googlecode.com/hg/images/vimwiki_logo.png" alt="Vimwiki" /></p>
-<p><a href="http://someaddr.com/bigpicture.jpg" title="link"><img src="./movie.jpg" alt=" " /></a></p>
+<p><a href="http://someaddr.com/bigpicture.jpg" title="link"><img src="./movie.jpg" alt="" /></a></p>
 <h3 id="image-with-attributes">image with attributes</h3>
 <p><img src="lalune.jpg" alt="cool stuff" style="width:150px;height:120px;" /></p>
-<p><img src="http://.../lalune.jpg" alt="class=&quot;center flow blabla&quot;" /></p>
+<p><img src="nonexist.jpg" alt="Non-existing image" style="font-color:red" /></p>
 <h2 id="lists">lists</h2>
 <ol>
 <li>ordered list item 1, and here is some math belonging to list item 1
