--- a/test/vimwiki-reader.html
+++ b/test/vimwiki-reader.html
@@ -1,25 +1,26 @@
-<h1 id="implemented"><em><strong>implemented</strong></em></h1>
+<h1 id="implemented"><em><span id="implemented"></span><strong>implemented</strong></em></h1>
 <h1 id="header">header</h1>
-<h2 id="header-level-two">header level two</h2>
-<h3 id="header-level-3">header <code>level</code> 3</h3>
-<h4 id="header-level-four">header <del>level</del> four</h4>
-<h5 id="header-level-5">header <em><strong>level</strong> 5</em></h5>
-<h6 id="header-level-6">header level 6</h6>
+<h2 id="header level two">header level two</h2>
+<h3 id="header level 3">header <code>level</code> 3</h3>
+<h4 id="header level four">header <del>level</del> four</h4>
+<h5 id="header level 5">header <em><span id="level"></span><strong>level</strong> 5</em></h5>
+<h6 id="header level 6">header level 6</h6>
 <p>======= not a header ========</p>
 <p>hi== not a header ==</p>
 <p>=== not a header ==</p>
 <p>=== not a header ===-</p>
 <p>not a header:</p>
 <p>=n=</p>
-<h2 id="centred-header" class="justcenter">centred header</h2>
-<h2 id="emph-and-strong">emph and strong</h2>
-<p><em>emph</em> <strong>strong</strong></p>
-<p><strong><em>strong and emph</em></strong></p>
-<p><em><strong>emph and strong</strong></em></p>
-<p><strong><em>emph inside</em> strong</strong></p>
-<p><strong>strong with <em>emph</em></strong></p>
-<p><em><strong>strong inside</strong> emph</em></p>
-<h2 id="horizontal-rule">horizontal rule</h2>
+<p>=== not a header ====</p>
+<h2 id="centred header" class="justcenter">centred header</h2>
+<h2 id="emph and strong">emph and strong</h2>
+<p><em>emph</em> <span id="strong"></span><strong>strong</strong></p>
+<p><span id="strong and emph"></span><strong><em>strong and emph</em></strong></p>
+<p><em><span id="emph and strong"></span><strong>emph and strong</strong></em></p>
+<p><span id="emph inside strong"></span><strong><em>emph inside</em> strong</strong></p>
+<p><span id="strong with emph"></span><strong>strong with <em>emph</em></strong></p>
+<p><em><span id="strong inside"></span><strong>strong inside</strong> emph</em></p>
+<h2 id="horizontal rule">horizontal rule</h2>
 <p>top</p>
 <hr />
 <p>middle</p>
@@ -30,9 +31,9 @@
 <p><del>This is <em>struck out</em></del> with emph</p>
 <h2 id="comments">comments</h2>
 <p>this is %% not secret</p>
-<h2 id="inline-code">inline code</h2>
+<h2 id="inline code">inline code</h2>
 <p>Here is some <code>inline code</code>.</p>
-<h2 id="preformatted-text">preformatted text</h2>
+<h2 id="preformatted text">preformatted text</h2>
 <pre><code>  Tyger! Tyger! burning bright
    In the forests of the night,
     What immortal hand or eye
@@ -41,36 +42,37 @@
    Burnt the fire of thine eyes?
     On what wings dare he aspire?
      What the hand dare sieze the fire?</code></pre>
-<h3 id="preformatted-text-with-attributes">preformatted text with attributes</h3>
+<h3 id="preformatted text with attributes">preformatted text with attributes</h3>
 <pre class="python" style="color:blue"><code> for i in range(1, 5):
      print(i)</code></pre>
-<h2 id="block-quotes">block quotes</h2>
+<h2 id="block quotes">block quotes</h2>
 <blockquote>
-(indentation 4 spaces) This would be a blockquote in Vimwiki. It is not <strong>highlighted</strong> in Vim but (indentation 1 space followed by 1 tab of width 4) could be styled by CSS in HTML. Blockquotes are usually used to quote a (indentation 1 tab of width 4) long piece of text from another source. <del>blah blah</del> <span id="-blockquote"></span><span id="blockquote" class="tag">blockquote</span>
+(indentation 4 spaces) This would be a blockquote in Vimwiki. It is not <span id="highlighted"></span><strong>highlighted</strong> in Vim but (indentation 1 space followed by 1 tab of width 4) could be styled by CSS in HTML. Blockquotes are usually used to quote a (indentation 1 tab of width 4) long piece of text from another source. <del>blah blah</del> <span id="-blockquote"></span><span id="blockquote" class="tag">blockquote</span>
 </blockquote>
-<h2 id="external-links">external links</h2>
+<h2 id="external links">external links</h2>
 <p><a href="http://google.com" title="link"><em>Google</em> search engine</a></p>
 <p><a href="http://pandoc.org" class="uri">http://pandoc.org</a></p>
 <p><a href="ftp://vim.org" class="uri">ftp://vim.org</a></p>
 <p><a href="http://google.com" class="uri" title="link">http://google.com</a></p>
 <p><a href="mailto:info@example.org">email me</a></p>
 <p><a href="mailto:hello@bye.com">mailto:hello@bye.com</a></p>
-<h2 id="internal-links">internal links</h2>
+<h2 id="internal links">internal links</h2>
 <p><a href="This is a link" class="uri" title="link">This is a link</a></p>
 <p><a href="This is a link source" title="link">Description of the link</a></p>
 <p><a href="projects/Important Project 1" class="uri" title="link">projects/Important Project 1</a> <a href="../index" class="uri" title="link">../index</a> <a href="a subdirectory/" title="link">Other files</a></p>
-<p><a href="wiki1:This is a link source" title="link">Description of the link</a> <a href="#My anchor" class="uri" title="link">#My anchor</a></p>
 <p><a href="#tag-one" title="link">try me to test tag anchors</a></p>
 <p><a href="#block quotes" title="link">try me to test header anchors</a></p>
+<p><a href="#strong" title="link">try me to test strong anchors</a></p>
 <p><a href="Todo List#Tomorrow" title="link">Tasks for tomorrow</a></p>
 <p><a href="file:../assets/data.csv" title="link">Important Data</a></p>
+<h3 id="links with thumbnails">links with thumbnails</h3>
+<p><a href="http://www.google.com" title="link"><img src="./movie.jpg" alt="" /></a></p>
 <h2 id="images">images</h2>
 <p><img src="file:./lalune.jpg" alt="" /></p>
 <p><img src="http://vimwiki.googlecode.com/hg/images/vimwiki_logo.png" alt="Vimwiki" /></p>
-<p><a href="http://someaddr.com/bigpicture.jpg" title="link"><img src="./movie.jpg" alt="" /></a></p>
-<h3 id="image-with-attributes">image with attributes</h3>
+<h3 id="image with attributes">image with attributes</h3>
 <p><img src="lalune.jpg" alt="cool stuff" style="width:150px;height:120px;" /></p>
-<p><img src="nonexist.jpg" alt="Non-existing image" style="font-color:red" /></p>
+<p><img src="nonexist.jpg" alt="Non-existing image" style="font-color:red" /> <img src="lalune.jpg" alt="cool stuff" style="width:150px;height:120px;" /></p>
 <h2 id="lists">lists</h2>
 <ol>
 <li>ordered list item 1, and here is some math belonging to list item 1
@@ -184,13 +186,13 @@ and some more text belonging to item 1.</li>
 <h2 id="paragraphs">paragraphs</h2>
 <p>This is first paragraph with two lines.</p>
 <p>This is a second paragraph with two lines after many blank lines.</p>
-<h2 id="the-todo-mark">the todo mark</h2>
+<h2 id="the todo mark">the todo mark</h2>
 <p><span class="todo">TODO:</span></p>
-<h1 id="not-implemented-yet"><em><strong>not implemented yet</strong></em></h1>
-<h2 id="sup-sub">sup, sub</h2>
+<h1 id="not implemented yet"><em><span id="not implemented yet"></span><strong>not implemented yet</strong></em></h1>
+<h2 id="sup, sub">sup, sub</h2>
 <p>super^script^</p>
 <p>sub,,script,,</p>
-<h2 id="ordered-lists-with-non--identifiers">ordered lists with non-# identifiers</h2>
+<h2 id="ordered lists with non-# identifiers">ordered lists with non-# identifiers</h2>
 <p>1. Numbered list item 1 2. Numbered list item 2 3. Numbered list item 3</p>
 <p>4. Numbered list item 1 5. Numbered list item 2 6. Numbered list item 3</p>
 <p>1) Numbered list item 1 2) Numbered list item 2 3) Numbered list item 3</p>
@@ -207,9 +209,9 @@ and some more text belonging to item 1.</li>
 <ul>
 <li>Bulleted list item 3</li>
 </ul>
-<h2 id="definition-list">definition list</h2>
+<h2 id="definition list">definition list</h2>
 <p>Term 1:: Definition 1 Term 2:: :: Definition 2 :: Definition 3</p>
-<h2 id="tables-with-spans">tables with spans</h2>
+<h2 id="tables with spans">tables with spans</h2>
 <table>
 <thead>
 <tr class="header">
@@ -240,7 +242,7 @@ and some more text belonging to item 1.</li>
 </tr>
 </tbody>
 </table>
-<h2 id="centered-tables">centered tables</h2>
+<h2 id="centered tables">centered tables</h2>
 <table>
 <thead>
 <tr class="header">
@@ -257,7 +259,7 @@ and some more text belonging to item 1.</li>
 </table>
 <h2 id="placeholders">placeholders</h2>
 <p>%title title %template template</p>
-<h2 id="todo-lists">todo lists</h2>
+<h2 id="todo lists">todo lists</h2>
 <ul>
 <li>[ ] task 1</li>
 <li>[ ] task 2</li>
